--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body{
     height: 360px;
     margin: auto;
 }
+
 .songs h3{
     display: flex;
     justify-content: flex-start;
@@ -304,6 +305,13 @@ body{
     max-width: 1300px;
     padding: 0 250px;
     margin-top: 100px;
+
+    color:#fff;
+    font-family: 'Anton', sans-serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 .area_direita {
@@ -320,5 +328,54 @@ body{
 .area_mensagem_bottom {
     display: flex;
     justify-content: center;
-    margin-bottom: 300px;
+    margin-bottom: 10px;
+    
+}
+
+.area_mensagem_bottom button {
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.566) 0%, rgb(208, 208, 208) 100%);
+    color: rgb(66, 65, 65);
+    padding: 9px 42px;
+    border-radius: 4px;
+    
+    font-family: 'Anton', sans-serif;
+    
+    text-align: center;
+    cursor: pointer;
+}
+
+.area_mensagem_bottom button:hover{
+    color: #121114;
+    transform: scale(1.01);
+    box-shadow: 3px 3px 20px rgb(255, 255, 255);
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.footer span{
+    color:rgba(255, 255, 255, 0.315);
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.footer a{
+    color:rgba(255, 255, 255, 0.808);
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
+    text-shadow: 3px 3px 20px rgba(255, 255, 255, 0.315);
+}
+
+.footer a:hover{
+    color: rgba(255, 255, 255, 0.628);
+    font-family: 'Bebas Neue', cursive;
+    font-size: 40px;
+    text-shadow: 3px 3px 50px rgba(255, 255, 255, 0.315);
 }
